--- a/bin/ubuntu_64_cgminer/README
+++ b/bin/ubuntu_64_cgminer/README
@@ -9,6 +9,8 @@ DR1 miner parameters description:
 --dr1-check-testnonce Set DR1 check nonce before submit to server
 --dr1-scan-serial|-S  [# Direct serial I/O, manual port specification (Linux)--dr1-scan-serial /dev/ttyUSB0 --dr1-scan-serial /dev/ttyUSB1 (Windows) --dr1-scan-serial //./COM5]
                       [# Direct serial I/O, auto-detect ports (Linux only)--dr1-scan-serial dr1:auto]
+--du1           Just for miniusb mining,if set minidr will auto ignore --dr1-asic-x --dr1-asic-y --dr1-cutoff-temp --drl-cutoff-fan
+					  
 Linux DEPENDENCIES :
 curl dev library 
 (sudo apt-get install libcurl4-openssl-dev)
@@ -18,4 +20,6 @@ curses dev library
 
 Usage:
 ./cgminer --x11 -o "stratum+tcp://url:port" -u xxx -p x --dr1-clk 400 --dr1-fan LV3 -S /dev/ttyUSB0
+USB Usage:
+./cgminer --x11 -o "stratum+tcp://url:port" -u xxx -p x --dr1-clk 400 --dr1-fan LV3 -S /dev/ttyUSB0 --du1 
 
